<resources>
    <string name="app_name">Sistem Operasi</string>
    <string name="judul">SISTEM OPERASI</string>
    <string name="textno1">Hidupkan komputer Anda, tekan tombol DEL untuk masuk ke menu BIOS, tetapi tidak semua komputer atau laptop memakai tombol yang sama. Tombol yang dapat Anda gunakan selain DEL adalah F1, F2, Fn + 2, coba salah satu dari tombol tersebut.</string>
    <string name="no1">Microsoft Windows atau yang sering dikenal dengan Windowsadalah sistem operasi yang dikembangkan oleh Microsoft, yang menggunakan Graphical User Interface (GUI). Sistem operasi Windows sudah berevolusi dari MS-DOS, yaitu sebuah sistem operasi berbasis modus teks dan command-line.</string>
    <string name="textno2">Tampilan menu BIOS seperti pada gambar dibawah ini. Biasanya menu BIOS di setiap komputer atau laptop juga berbeda. Selanjutnya silahkan Anda pindah ke tab Bootdengan memakai tombol ◄ ►.</string>
    <string name="textno3">Seperti pada gambar dibawah ini, posisi HDD berada paling atas sendiri, hal tersebut menandakan booting pertama kali dilakukan dari HDD. Oleh karena itu, Anda harus mengubahnya supaya booting pertama kali melalui CD/DVD.</string>
    <string name="textno4">Pilih CD-ROM Drive, lalu gunakan tombol + / – untuk memindahkan hingga berapa diposisi atas seperti gambar dibawah ini.</string>
    <string name="textno5">Masukkan DVD installer windows ke dalam DVDROM komputer atau laptop Anda. Simpan konfigurasi dengan cara menekan tombol F10.</string>
    <string name="textno6">Inilah cara menyeting bios sebelum kita mulai ke tahap penginstalan</string>
    <string name="windows71">Pertama tekan sembarang tombol untuk memulai proses instalasi windows 7.</string>
    <string name="windows72">Pilih Indonesian pada Time and currency format. Untuk Language to install dan Keyboard or input method biarkan saja default. Kemudian klik Next.</string>
    <string name="windows73">Mulai proses instalasi windows 7, pilih Install Now.</string>
    <string name="windows74">Ceklist I accepted the license terms, lalu klik Next.</string>
    <string name="windows75">Kemudian pilih Custom (advanced).</string>
    <string name="windows76">Jika anda ingin menginstall ulang, downgrade atapun upgrade sistem operasi windows sekaligus ingin data-data dipartisi lain tidak hilang, cukup delete Disk 0 Partition 2 (partisi C:) serta Disk 0 Partition 1 : System Reserved, maka otomatis kedua partisi ini akan menjadi Unallocated Space. Silakan buat partisi baru lagi, otomotis partisi tersebut akan menjadi Disk 0 Partition 2, dan jadikan Disk 0 Partition 2 sebagai lokasi instalasi windows 7, lalu klik Next.Bagi yang ingin melakukan install ulang, downgrade ataupun upgrade ke windows 7 sekaligus tidak ingin data-data dipartisi lain hilang, silakan lewati langkah pada nomor 7 sampai 10.
                            Dan bagi yang pertama kali melakukan proses instalasi </string>
    <string name="windows77">Langkah selanjutnya mempartisi ruang harddisk. Pilih Drive options (advanced) => New. Kemudian tentukan ukuran partisi tersebut. Klik Apply jika sudah selesai.</string>
    <string name="windows78">Klik OK untuk pembuatan system files windows atau yang biasa disebut dengan system reserved partition.</string>
    <string name="windows79">Buat 2 partisi dengan cara yang sama seperti pada langkah nomor 7. Berapa banyak partisi tergantung selera Anda. Tutorial kali ini hanya membuat 2 partisi saja.</string>
    <string name="windows710">Pilih Disk 0 Partition 2 sebagai lokasi proses instalasi windows 7. Kemudian klik Next. Lokasi instalasi kami sarankan di Disk 0 Partition 2.</string>
    <string name="windows711">Mulai proses instalasi windows 7. Proses ini akan memakan waktu kurang lebih 30 menit. Selama proses komputer atau laptop Anda akan restart dengan sendirinya berapa kali</string>
    <string name="windows712">Jangan tekan tombol apapun pada keyboard ketika proses restart berlangsung. Hal tersebut akan menyebabkan komputer mengulangi proses instalasi dari awal.</string>
    <string name="windows713">Langkah berikutnya yakni memasukkan Nama Pengguna dan juga Nama Komputer. Klik Next untuk melanjutkan.</string>
    <string name="windows714">Buat password untuk akun Windows 7 Anda. Buatlah password yang kuat dengan kombinasi angka juga simbol. Pada password hint, isikan kata atau kalimat yang membantu Anda untuk mengingat password windows 7 Anda. Bila Anda tidak ingin menggunakan password,kosongkan saja Kemudian klik Next.</string>
    <string name="windows715">Masukkan product key windows 7 lalu Next. Jika tidak memiliki product key windows 7 Anda dapat melewati langkah ini tanpa memasukkan product key yang diminta. Tetapi tanpa aktivasi product key, Anda hanya bisa menggunakan Windows 7 selama 30 hari.Selanjutnya klik Next. </string>
    <string name="windows716">Pada Windows Update, pilih Ask me later. Anda dapat memilih Use recommended settings bila DVD windows 7 yang anda gunakan original. Tetapi jika tidak, pilih Ask me later</string>
    <string name="windows717">Zona waktu / Time zone pilih (UTC+07:00) Bangkok, Hanoi, Jakarta.</string>
    <string name="windows718">Langkah selanjutnya menentukan lokasi jaringan, pilih Public Network.</string>
    <string name="windows719">Jika Anda menambahkan password untuk akun Anda, pada saat menghidupkan komputer Anda harus memasukkan password terlebih dahulu untuk dapat masuk ke desktop</string>
    <string name="windows720">Selesai.</string>
    <string name="windows8a">Untuk memulai instalasi Windows 8 / 8.1, tekan tombol sembarang.</string>
    <string name="windows8b">Pilih Indonesian (Indonesia) pada menu Time and currency format. Untuk lainnya biarkan saja default, lihat gambar. Klik Next.</string>
    <string name="windows8c">Tampilan mulai instalasi seperti gambar dibawah ini. Pilih tombol Install now untuk memulai instalasi windows.</string>
    <string name="windows8d">Masukkan product key windows 8, biasanya product key terdapat satu paket dengan DVD. Lanjut tekan Next.</string>
    <string name="windows8e">Ceklist I accept the licence terms, pilih tombol Next.</string>
    <string name="windows8f">Pada berikut, pilih Custom: Install Windows only (advanced).</string>
    <string name="macos1">Jika perangkat Mac dalam kondisi menyala, tancapkan flashdisk bootable mac tadi ke port USB kemudian restart Mac.</string>
    <string name="macos2">Saat terdengan suara bootup yang menandakan Mac nyala, tekan tombol Command + R hingga muncul logo booting Apple dan tunggu sampai proses booting selesai.</string>
    <string name="macos3">Setelah proses booting selesai, akan muncul menu OS X Utilities untuk memulai proses instalasi perangkat Mac.</string>
    <string name="macos4">Pilih menu Disk Utility yang paling bawah untuk melakukan format ulang hardisk Mac. Pastikan anda format total hardisk sehingga yang cuma ada 1 (stau) partisi yang ada seperti gambar dibawaha. Jika anda tidak melakukannya format hardisk, anda tidak akan dapat memilih partisi hardisk nantinya.</string>
    <string name="macos5">Tutup aplikasi Disk Utility kemudian pilih menu Install OS X untuk memulai proses install Mac.</string>
    <string name="macos6">Untuk melanjutkan instalasi, tekan tombol Continue yang ada dibagian bawah logo OS X.</string>
    <string name="macos7">Pilih tombol Agree untuk melanjutkan proses instalasi. Ini hanya license agreement dari Apple.</string>
    <string name="macos8">Pilih partisi hardisk Mac yang tersedia dan silahkan tunggu hingga proses instalasi selesai.</string>
    <string name="macos9">Selanjutnya, tekan tombol Install yang ada dibagian bawah partisi.</string>
    <string name="macos10">Proses instalasi akan dimulai, clean install Mac ini akan menghapus semua data di partisi yang dipilih diatas tadi. Di jendela tersebut, anda dapat melihat estimasi waktu yang dibutuhkan untuk install Mac OS X.</string>
    <string name="macos11">Waktu yang dibutuhkan untuk install Mac tergantung dari hardware yang anda gunakan. Anda yang menggunakan SSD, akan mendapati proses install Mac yang cepat dibandingkan yang hanya menggunakan HDD biasa.</string>
    <string name="macos12">Setelah proses install mac os berhasil, perangkat Mac akan otomatis restart.</string>
    <string name="chrome">Cara Menginstall Chromixium OS </string>
    <string name="chromedefinisi">Chromixium OS adalah sistem operasi Open Source gratis, modern, menarik, dan sangat fungionalitas untuk laptop, notebook, dan komputer desktop. Chromixium OS menggabungkan kesederhanaan dari Chromebook (Chrome OS) dengan fleksibilitas dan stabilitas rilis Ubuntu LTS.Seperti biasa, sistem operasi ini bisa dual boot dengan sistem operasi lainnya.</string>
    <string name="chrome1">1. Siapkan DVD/USB sebagai bootablenya. Untuk membuat bootable menggunakan USB </string>
    <string name="chrome2">2. Atur booting dari BIOS, atur sehingga DVD/USB yang digunakan pada urutan pertama.</string>
    <string name="chrome3">3. Setelah itu kita akan masuk ke menu pertama dari bootable Chromixium OS. Pilih Start Chromixium, enter.</string>
    <string name="chrome4">4. Kita akan masuk ke desktop Chromixium OS, di sini kita bisa langsung mencoba – coba fitur yang ada di Chromixium OS.
                    Untuk menginstall klik Icon Install di taksbar.</string>
    <string name="chrome5">5. Ketika muncul jendela credit, klik I agree.</string>
    <string name="chrome6">6. Pilih bahasa, untuk bahasa sesuai keinginan kita, Continue.</string>
    <string name="chrome7">7. Persiapan Install, jangan lupa ceklist Install this third-party software, Continue.</string>
    <string name="chrome8">8. Pilih tipe instalasi, disini kita pilih Something else, agar kita bisa menyesuaikan sendiri partisinya, Continue</string>
    <string name="chrome9">9. Sudah masuk ke bagian partisi, karena harddisk yang digunakan belum dibuat partisi sama sekali, kita klik New Partition Table…
                    Jika ada pertanyaan, klik saja Continue.</string>
    <string name="chrome10">10. Pilih yang diinginkan, klik icon “+”. Lalu kita buat partisi untuk swap, untuk partisi swap direkomendasikan sebesar 2x RAM, misal RAM yang digunakan 512MB maka ukuran untuk swap 1024MB. Kalau sudah Ok.</string>
    <string name="chrome11">11. Selanjutnya pilih space yang kosong, klik icon “+” lagi. Sekarang kita buat untuk “/”. Filesystem yang digunakan Ext4 dan mount point /. Kalau sudah Ok.</string>
    <string name="chrome12">12. Kalau sudah dibuat partisi, selanjutnya klik Install Now.</string>
    <string name="chrome13">13. Akan muncul jendela pertanyaan, klik Continue.</string>
    <string name="chrome14">14. Pilih lokasi, Klik saja daerah pada peta. Klik Continue.</string>
    <string name="chrome15">15. Pilih tipe keyboard, English (US). Klik Continue.</string>
    <string name="chrome16">16. Isi Nama Anda, Nama komputer, username dan password. Klik Continue.</string>
    <string name="chrome17">17. Proses instalasi sedang berjalan.</string>
    <string name="chrome18">18. Setelah semua proses selesai, Restart Komputer.</string>
    <string name="chrome19">Sekarang kita sudah menginstall Chromixium OS di komputer. Kalau ingin menggunakan aplikasi yang biasa digunakan di Ubuntu, di sini bisa digunakan, tinggal install seperti biasa, karena pada dasarnya ini adalah distro ubuntu. Klik kanan pada desktop untuk melihat semua aplikasi yang terinstall.</string>
</resources>