<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChromixiumOs">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Chromixium OS"
                android:background="@drawable/chromixium"
                android:paddingTop="110dp"
                android:textColor="#00F"
                android:textSize="25dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/chromedefinisi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/chromedefinisi"
                android:textColor="#000000" />
            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/cromcover" />
            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/cromcover1" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/chrome"
                android:textColor="#000000"
                android:textSize="15dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/chrome1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/chrome1"
                android:textColor="#000000" />
            <TextView
                android:id="@+id/chrome2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/chrome2"
                android:textColor="#000000" />
            <TextView
                android:id="@+id/chrome3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/chrome3"
                android:textColor="#000000" />
            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/crom3" />
            <TextView
                android:id="@+id/chrome4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/chrome4"
                android:textColor="#000000" />
            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/crom4" />
            <TextView
                android:id="@+id/chrome5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/chrome5"
                android:textColor="#000000" />
            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/crom5" />
            <TextView
                android:id="@+id/chrome6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/chrome6"
                android:textColor="#000000" />
            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/crom6" />
            <TextView
                android:id="@+id/chrome7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/chrome7"
                android:textColor="#000000" />
            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/crom7" />
            <TextView
                android:id="@+id/chrome8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/chrome8"
                android:textColor="#000000" />
            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/crom8" />
            <TextView
                android:id="@+id/chrome9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/chrome9"
                android:textColor="#000000" />
            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/crom9" />
            <TextView
                android:id="@+id/chrome10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/chrome10"
                android:textColor="#000000" />
            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/crom10" />
            <TextView
                android:id="@+id/chrome11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/chrome11"
                android:textColor="#000000" />
            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/crom11" />
            <TextView
                android:id="@+id/chrome12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/chrome12"
                android:textColor="#000000" />
            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/crom12" />
            <TextView
                android:id="@+id/chrome13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/chrome13"
                android:textColor="#000000" />
            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/crom13" />
            <TextView
                android:id="@+id/chrome14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/chrome14"
                android:textColor="#000000" />
            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/crom14" />
            <TextView
                android:id="@+id/chrome15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/chrome15"
                android:textColor="#000000" />
            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/crom15" />
            <TextView
                android:id="@+id/chrome16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/chrome16"
                android:textColor="#000000" />
            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/crom16" />
            <TextView
                android:id="@+id/chrome17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/chrome17"
                android:textColor="#000000" />
            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/crom17" />
            <TextView
                android:id="@+id/chrome18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/chrome18"
                android:textColor="#000000" />
            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/crom18" />
            <TextView
                android:id="@+id/chrome19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/chrome19"
                android:textColor="#000000" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>