<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MacOs">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@drawable/macos"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="CARA INSTALL Mac Os DENGAN FLASHDISK DI MacBOOK PRO"
                android:textColor="#F68B42"
                android:textSize="20dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/macos1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/macos1"
                android:textColor="#000000" />


            <TextView
                android:id="@+id/macos2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/macos2"
                android:textColor="#000000" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/mac2" />
            <TextView
                android:id="@+id/macos3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/macos3"
                android:textColor="#000000" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/mac3" />
            <TextView
                android:id="@+id/macos4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/macos4"
                android:textColor="#000000" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/mac4" />
            <TextView
                android:id="@+id/macos5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/macos5"
                android:textColor="#000000" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/mac5" />
            <TextView
                android:id="@+id/macos6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/macos6"
                android:textColor="#000000" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/mac6" />
            <TextView
                android:id="@+id/macos7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/macos7"
                android:textColor="#000000" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/mac7" />
            <TextView
                android:id="@+id/macos8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/macos8"
                android:textColor="#000000" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/mac8" />
            <TextView
                android:id="@+id/macos9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/macos9"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/macos10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/macos10"
                android:textColor="#000000" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/mac10" />
            <TextView
                android:id="@+id/macos11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/macos11"
                android:textColor="#000000" />
            <TextView
                android:id="@+id/macos12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/macos12"
                android:textColor="#000000" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>